--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
     <title>Document</title>
   </head>
   <body>
-    <button>Click me</button>
+    <!-- <button id="btn">Click me</button>
+    <h1>Freeman is the best guy</h1>
+    <p class="para">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+      magnam dolorem maxime repudiandae id assumenda doloremque eos minus enim.
+      Possimus illum consequatur tenetur. Vitae illum neque unde corporis quasi
+      obcaecati?
+    </p>
+    <p class="para">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+      magnam dolorem maxime repudiandae id assumenda doloremque eos minus enim.
+      Possimus illum consequatur tenetur. Vitae illum neque unde corporis quasi
+      obcaecati?
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+      magnam dolorem maxime repudiandae id assumenda doloremque eos minus enim.
+      Possimus illum consequatur tenetur. Vitae illum neque unde corporis quasi
+      obcaecati?
+    </p>
+    <h1 class="para">Finest boy ever liveth</h1>
+    <form action="" id="form">
+      <input type="text" name="" id="" placeholder="enter your name" /> <br />
+      <br />
+      <input type="email" name="" id="" placeholder="enter your email" /> <br />
+      <br />
+      <button>Submit</button>
+    </form> -->
   </body>
   <script src="class1.js"></script>
 </html>
