--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -27,14 +28,18 @@
       Possimus illum consequatur tenetur. Vitae illum neque unde corporis quasi
       obcaecati?
     </p>
-    <h1 class="para">Finest boy ever liveth</h1>
+    <h1 class="para">Finest boy ever liveth</h1> -->
     <form action="" id="form">
-      <input type="text" name="" id="" placeholder="enter your name" /> <br />
+      <div id="alert"></div>
+      <input type="text" id="fullName" placeholder="enter your name" /> <br />
       <br />
-      <input type="email" name="" id="" placeholder="enter your email" /> <br />
+      <input type="email" id="email" placeholder="enter your email" /> <br />
       <br />
       <button>Submit</button>
-    </form> -->
+    </form>
+    <div class="contents">
+      <h1>Names and Emails Of Employees</h1>
+    </div>
   </body>
   <script src="class1.js"></script>
 </html>
