--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       <br />
       <button>Submit</button>
     </form>
-    <div class="contents">
+    <div class="contents-container">
       <h1>Names and Emails Of Employees</h1>
+      <div class="contents"></div>
     </div>
   </body>
   <script src="class1.js"></script>
